Inicio da programacao do home controller

--- a/CalculadoraCompleta/CalculadoraCompleta/Views/Home/Index.cshtml
+++ b/CalculadoraCompleta/CalculadoraCompleta/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                     <!--linha-->
                     <td colspan="5">
                         <!--coluna-->
-                        <input type="text" name="visor" readonly />
+                        <input type="text" name="visor" value="@ViewBag.Visor" readonly />
                     </td>
                 </tr>
                 <!--................................................-->
